<resources>
    <string name="app_name">FoodVilla</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ip_address">13.235.250.119</string>
    <string name="token">be283b8c66b914</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="add_to_cart_btn">Add</string>
    <string name="proceed_to_cart_btn">Proceed to Cart</string>
    <string name="choose_from_menu_listed_below">Choose from menu listed below</string>
    <string name="ordering_from">Ordering From :</string>
    <string name="place_order">"Total: Rs. 200  PLACE ORDER</string>
    <string name="shared_preferences">RestaurantPreference</string>
    <string name="your_previous_orders_are_listed_below">Your previous orders :</string>
    <string name="question1">Q1. Why is FoodVilla doing this?</string>
    <string name="answer1">A1. At FoodVilla we strive to add value to your business. We understand the challenges you face on a daily basis in sourcing the best quality packaging material. FoodVilla Packaging Assist is to take care of all your packaging needs.</string>
    <string name="question2">Q2. How are you guys different?</string>
    <string name="answer2">A2. Best products - We only list the products which have passed our tests and are the best suitable for delivery. They will help in giving a better consumer experience, so you can get repeated orders. Best prices - We have negotiated rates with our distributors exclusive for FoodVilla Restaurant. Convenience - No need to haggle for prices. No need to follow-up on delivery. We track all orders to ensure you have a hassle free experience.</string>
    <string name="question3">Q3. Why is FoodVilla doing this?</string>
    <string name="answer3">A3. At FoodVilla we strive to add value to your business. We understand the challenges you face on a daily basis in sourcing the best quality packaging material. FoodVilla Packaging Assist is to take care of all your packaging needs.</string>
    <string name="question4">Q4. How are you guys different?</string>
    <string name="answer4">A4. Best products - We only list the products which have passed our tests and are the best suitable for delivery. They will help in giving a better consumer experience, so you can get repeated orders. Best prices - We have negotiated rates with our distributors exclusive for FoodVilla Restaurant. Convenience - No need to haggle for prices. No need to follow-up on delivery. We track all orders to ensure you have a hassle free experience.</string>
    <string name="restaurant_not_found">  Oops! No restaurant found here :(</string>
    <string name="no_orders_placed">No Orders Placed Yet</string>
    <string name="food_villa">FoodVilla</string>


</resources>
