<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/search_bar"
    android:orientation="vertical"
    tools:context=".fragment.FaqsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/txtFAQ1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="10dp"
                android:padding="5dp"
                android:text="@string/question1"
                android:textColor="@color/txt_head"
                android:textSize="17sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/txtFAQA1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/answer1"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dip"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/textViewFAQ2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="10dp"
                android:padding="5dp"
                android:text="@string/question2"
                android:textColor="@color/txt_head"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewFAQA2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/answer2"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/textViewFAQ3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="10dp"
                android:padding="5dp"
                android:text="@string/question3"
                android:textColor="@color/txt_head"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewFAQA3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:padding="8dp"

                android:text="@string/answer3"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/textViewFAQ4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="10dp"
                android:padding="5dp"
                android:text="@string/question4"
                android:textColor="@color/txt_head"
                android:textSize="17sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/textViewFAQA4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"

                android:text="@string/answer4"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>



